--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="exitSessionButton">Exit Session</string>
     <string name="sessionResultsName">Live Results Now!</string>
     <string name="sessionFormName">Fill in this Form, Download the File, Sign into attendence</string>
+    <string name="sessionIDRequest">Session ID: </string>
 
 </resources>
