--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="sessionResultsName">Live Results Now!</string>
     <string name="sessionFormName">Fill in this Form, Download the File, Sign into attendence</string>
     <string name="sessionIDRequest">Session ID: </string>
+    <string name="sessionNameRequest">Session Name: </string>
 
 </resources>
