--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,7 @@
 - sessions should always keep attendees in list
 - Users::session_id maybe is useless then
 - need to make sure to not add redundancy to attendees
+- check if session id already exists
 
 #known bugs
 - cannot create a sessionName with a space in it
